parser/tests/parser/complex/invalid/basic_8.mf2
.foo{:hello}{:bar}
{{}}
=== spans ===
                    .foo{:hello}{:bar}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                          ^^^^ 1:0-1:4
Pattern                                     0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..18)
  .foo{:hello}{:bar}↵{{}}
  ^^^^^^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..23,
    declarations: [],
    body: QuotedPattern {
        span: @19..23,
        pattern: Pattern {
            parts: [],
        },
    },
}